# Taran

./: .gitignore  Cargo.toml  README.md  config_testing.json
.fleet/: run.json
src/: main.rs
src/lib/: mod.rs
src/lib/command_handler/: mod.rs  typing_handler.rs
src/lib/config/: command_types.rs  mod.rs
src/lib/directories/: latest.rs
