[package]
name = "taran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
enigo = "0.0.14"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
